--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <title>Марк Шулико</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="марк.ico">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Kenezz/ht/main/%D0%BC%D0%B0%D1%80%D0%BA.ico">
 
   </head>
 
   <body>
     <h1>Праздник Давида Поносяна</h1>
     <p>19 ноября мы празднуем день Давида Поносяна. В этот день прекращуются все войны, а видеокарты по всему миру начинают работать в 5 раз быстрее. Так Поносян может играть в гпо без повер сейва, и при этом другие игроки могут насладиться игрой без лагов. Так Святой Поносян дарит всему миру великий празник.</p>\
-    <img src="понос.png" alt="">
+    <img src="https://raw.githubusercontent.com/Kenezz/ht/main/%D0%BF%D0%BE%D0%BD%D0%BE%D1%81.png" alt="">
     <input type="text">
     <input type ="submit" name="" value="Покакать">
     <hr>
